added gc healtz